[package]
name = "gatekeeper-core"
authors = ["Mary Strodl <mstrodl@csh.rit.edu>"]
description = "Library for authenticating gatekeeper tags"
repository = "https://github.com/ComputerScienceHouse/gatekeeper-core"
license = "MIT"
version = "0.2.1"
edition = "2021"

[dependencies]
apdu-core = { version = "0.3.0", features = ["longer_payloads"] }
freefare-sys = "0.2.0"
libc = "0.2.153"
log = "0.4.20"
nfc-sys = "0.1.5"
openssl = "0.10.63"
rand = "0.8.5"
